# titan-rust-client

./: AGENTS.md  CLAUDE.md  Cargo.toml  FOR_USER.md  PLAN.md  README.md  titan-code-map.html
examples/: .env.example  automated_swap.sh  check_price.sh  debug_dex_routes.sh  get_venues.sh  stream_quotes.sh  swap_custom_tokens.sh  swap_sol_to_usdc.sh  swap_usdc_to_sol.sh
scripts/: integration_check.sh  tests.sh
src/: client.rs  config.rs  connection.rs  error.rs  instructions.rs  lib.rs  main.rs  queue.rs  state.rs  stream.rs  tls.rs
tests/: api.rs  connection.rs  integration.rs  simple_ws.rs  streaming.rs
tests/common/: mock_server.rs  mod.rs
