[package]
name = "titan-rust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
titan-api-codec = "1.2.1"
titan-api-types = "2.0.0"


[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
  "precommit-hook",
  "run-cargo-test",
  "run-cargo-clippy",
  "run-cargo-fmt",
  "run-for-all"
]